# agents-gateway

./: .commitlintrc.json  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_TOOLKITS.md  DEMO_TOOLKITS_API.md  Dockerfile  README.md  SECURITY.md  TOKEN_API.md  codecov.yml  compose.yaml  demo_toolkits_app.py  koyeb.yaml  mypy.ini  pyproject.toml  railway.toml  render.yaml  requirements.txt  test_current_knowledge_service.py  test_reproduce_issue.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  notify-tests.yml
agents/: __init__.py  agent.py  agent_utils.py  model_factory.py  toolkit_selector.py  v2_selector.py
api/: main.py  prompts_state.py  settings.py
api/observability/: __init__.py  config.py  instrumentation.py
api/routes/: __init__.py  admin.py  health.py  v2_router.py
api/services/: __init__.py  access_token.py  auth.py  knowledge_service.py  logging.py  models.py  prompts_client.py  token_refresh.py  token_security.py
cache/: __init__.py  background_tasks.py  prompts_cache.py
cli/: agent_cli.py  team_cli.py
cli/client_ui/: __init__.py  dialogs.py  formatters.py
db/: agent_info_crud.py  api_key_crud.py  db_models.py  engine_crud.py  knowledge_crud.py  prompt_crud.py  skill_crud.py  target_crud.py  team_info_crud.py  url.py  user_token_crud.py
db/migrations/: 007_create_skills_table.sql  010_add_supervisor_support.sql  README.md  run_migration.py  setup.sql  verify_migration.py
deploy/aws/: README.md  cloudformation.yaml
deploy/azure/: README.md
deploy/gcp/: README.md
docs/: toolkit-development-guide.md
dynamic_kb/: __init__.py
evals/: README.md  __init__.py  evaluator.py
modal/: run_local.py
prompts/: __init__.py  models.py  parser.py  service.py
remote_agent/: Dockerfile  app.py  executor.py  worker.Dockerfile
scripts/: README.md  deploy_to_koyeb.sh  deploy_to_railway.sh  deploy_to_render.sh  entrypoint.sh  import_jsonl_vectors.py  migrate_prompts_from_langsmith.py  mock_prompts_server.py  run_validate.sh  start_server.sh  validate.sh
sql/: complete_database_setup.sql  migration_scripts.sql  sample_data.sql  useful_queries.sql
supervisor/: __main__.py  approval.py  audit.py  models.py  prompt_composer.py  recovery.py  streaming.py  team_builder.py
tests/: conftest.py  test_admin.py  test_agent_config.py  test_agent_info_crud.py  test_agent_selector.py  test_background_tasks.py  test_basic.py  test_container.py  test_conversation_use_cases.py  test_debug_mode.py  test_evaluator.py  test_execution_toolkits.py  test_health.py  test_job_queue.py  test_knowledge_crud.py  test_knowledge_filters.py  test_knowledge_service.py  test_management_cli.py  test_mcp_chat_tools.py  test_model_enum.py  test_model_factory.py  test_observability.py  test_plugin_generator.py  test_prompts_cache_enhanced.py  test_prompts_client.py  test_recovery.py  test_remote_agent.py  test_skill_crud.py  test_streaming.py  test_supervisor_models.py  test_team_info_crud.py  test_token_refresh.py  test_token_security.py  test_toolkit_selector.py  test_user_token_crud.py  test_utils.py
toolkits/: API_REFERENCE.md  CHANGELOG.md  PACKAGE_STRUCTURE.md  QUICK_START.md  README.md  __init__.py  base.py  calendar.py  claude_code.py  contacts.py  drive.py  email.py  managed_agents.py  token_cache.py
workspace_suite/: __init__.py  config.py  models.py  utils.py
(+108 files in other folders)
