[project]
name = "agents-gateway"
dynamic = ["version"]
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno>=2.5.16",
  "fastapi[standard]",
  "google-genai>=1.72.0",
  "google-cloud-storage",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "logtail-python>=0.2.6",
  "types-requests",
  "cachetools>=5.0.0",
  "types-cachetools",
  "qdrant-client>=1.9.0",
  "pypdf>=6.10.0",
  # Security constraints for transitive dependencies
  "starlette>=1.0.0",
  "urllib3>=2.6.3",
  "pyasn1>=0.6.2",
  "h2>=4.3.0",
  "python-docx==1.2.0",
  "aiofiles>=25.1.0",
  "beautifulsoup4==4.14.3",
  "cryptography>=46.0.7",
  "httpx>=0.24.0",
  "pyyaml>=6.0",
  "dateparser",
  "types-dateparser",
  "openai>=2.31.0",
  "anthropic>=0.94.0",
  "Pillow>=12.2.0",
  "prompt-toolkit>=3.0.43",
  # Observability - OpenTelemetry (CNCF standard)
  "opentelemetry-api>=1.41.0",
  "opentelemetry-sdk>=1.41.0",
  "opentelemetry-exporter-otlp>=1.41.0",
  "opentelemetry-instrumentation-fastapi>=0.62b0",
  "opentelemetry-instrumentation-httpx>=0.62b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.62b0",
  # Observability - Sentry (backward compatibility)
  "sentry-sdk>=2.57.0",
]


[project.optional-dependencies]
dev = ["mypy", "ruff", "types-requests", "types-cachetools"]
test = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "coverage", "testcontainers", "requests"]
langsmith = ["langsmith>=0.7.30", "langchain-core>=1.2.28"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=10.0.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.2.1"

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = [".venv*", "cli/"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*", "agno.*", "logtail.*", "qdrant_client.*", "opentelemetry.*", "sentry_sdk.*", "InquirerPy", "InquirerPy.*", "docker.*", "kubernetes.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=api",
    "--cov=agents",
    "--cov=db",
    "--cov=dynamic_kb",
    "--cov=workspace_suite",
    "--cov=supervisor",
    "--cov=remote_agent",
    "--cov=toolkits",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["api", "agents", "db", "dynamic_kb", "workspace_suite", "prompts", "supervisor", "remote_agent", "toolkits"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/scripts/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.uv.pip]
no-annotate = true
